tests/fixtures/valid/exception/try_all_blocks.py
# Test try with all blocks
try:
    x: int = 10
except:
    print(b"error")
else:
    print(b"else")
finally:
    print(b"finally")
print(b"done")
