tests/fixtures/invalid/bin_bytes.py
# Cannot call bin() with Bytes
x = bin(b"hello")
